write valid dxf record, related fdo#71971

Change-Id: I99f4dfca78cc0fd5d9b947000a99f8414c2a899b